For issue #71 / non-sticky session locking: add lockingMode AUTO to detect readonly requests (tested by NonStickySessionsIntegrationTest.testReadOnlyRequestsDontLockSession). Also added ReadOnlyRequestsCache for this which tracks such requests. The session is locked before it's loaded from memcached (as long as it's not regarded as readonly), the lock is removed after session backup. There's one special thing: the CoyoteAdapter checks for session cookies if the session is valid which triggers a findSession (only to check isValid). This is solved by invoking "add" with the sessionId to see if the session exists in memcached.